# designing-gemma

./: .env.example  .env.linux.example  .env.mac.example  .gitignore  Dockerfile  docker-compose.yml  ollama_client.py  pyproject.toml  session_log.txt  ~dgtree.txt
.doc-gen/: check-report.txt  manifest.fletch  manifest.yml
.doc-gen/manifest-backups/: 20260512-130437-manifest.yml  20260512-130514-manifest.yml  20260513-074538-manifest.yml  20260513-221559-manifest.yml  20260515-145256-manifest.yml
.doc-gen/output/: .env.example.md  .env.linux.example.md  .env.mac.example.md  .gitignore.md  .pylintrc.md  Dockerfile.md  README.md.md  docker-compose.yml.md  ollama_client.py.md  project-tree.txt  pyproject.toml.md  ~dgtree.txt.md
data/: experiment_base.yaml  experiments.yaml  voices.yaml
data/voice_instructions/: annihilator.txt  hitchhiker.txt  kafka.txt  pratchett.txt
docs/: project-structure.md
docs/change/: designing-gemma-context-logging.md  designing-gemma-corpus-path-fix.md  designing-gemma-env-fix.md  designing-gemma-master-run-log.md  designing-gemma-num-ctx.md  designing-gemma-repo-context.md  designing-gemma-size-overrides.md  linter-02a-02b-split.md  linter-cleanup-pylint-fixes.md  linter-penalty-and-eval-count.md  linter-per-file-iteration.md  readme-gen-skip-incomplete.md  repo-reader-methods-render.md  skeleton-extractor-refactor.md  srb-sentence-gen-template-vars.md  srb_animation_config.md
docs/design/: 06_srb_sentence_gen_design.md  DOCKER_SETUP.md  handoff-2026-05-10.md  handoff-2026-05-12.md  handoff-2026-05-13.md  handoff-2026-05-14.md  handoff-2026-05-16.md  manifest-filter-design.md
docs/post/: post-notes.md
experiments/01_readme_gen/: config.yaml
experiments/02_linter_cleanup/: config.yaml
experiments/02a_linter_cleanup/: config.yaml
experiments/02b_linter_cleanup_diff/: config.yaml
experiments/03_srb_animation/: config.yaml
experiments/04_pkg_restructure/: config.yaml
experiments/05_capstone_summary/: config.yaml
experiments/05_srb_sentence_gen/: config.yaml  config_full.yaml
experiments/06_capstone_summary/: config.yaml
experiments/06_srb_sentence_gen/: config.yaml
tests/: conftest.py  test_config.py  test_ollama_client.py  test_prompt_loader.py
(+132 files in other folders)
