[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Designing Gemma
# A structured experiment framework for local LLM evaluation via Ollama.
#
# Named for the double meaning:
#   designing WITH Gemma — using it as a tool
#   designing FOR Gemma — writing prompts and specs that shape its behavior
#
# Also: Designing Women (1986). Delta Burke would have opinions about
# whether the model respected module boundaries.
# =============================================================================

[project]
name = "designing-gemma"
version = "0.1.0"
description = "A structured experiment framework for local LLM evaluation via Ollama"
authors = [
    { name = "Carolyn Boyle" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0",
    "pytest>=7.0",
]

[project.scripts]
designing-gemma      = "designing_gemma.experiment_runner:main"
designing-gemma-skel = "designing_gemma.skeleton_reader:main"
designing-gemma-filter = "designing_gemma.manifest_filter:main"

[project.urls]
Homepage = "https://github.com/carolynboyle/designing-gemma"
Repository = "https://github.com/carolynboyle/designing-gemma"

[tool.setuptools.packages.find]
where = ["src"]
include = ["designing_gemma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

# =============================================================================
# Version note
# =============================================================================
#
# This version number is the single source of truth for the project version.
#
# When cutting a release:
#   1. Increment version here
#   2. Commit and push
#   3. Tag the release
#
# Version follows semantic versioning: MAJOR.MINOR.PATCH
#   MAJOR — breaking changes to experiment framework or config schema
#   MINOR — new experiments, new voices, new features
#   PATCH — bug fixes, documentation, config changes
